--- a/administrator/language/en-GB/en-GB.com_weblinksplus.sys.ini
+++ b/administrator/language/en-GB/en-GB.com_weblinksplus.sys.ini
@@ -1,11 +1,6 @@
-; $Id: en-GB.com_weblinks.sys.ini 20196 2011-01-09 02:40:25Z ian $
-; Joomla! Project
-; Copyright (C) 2005 - 2011 Open Source Matters. All rights reserved.
-; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
-; Note : All ini files need to be saved as UTF-8
 
 COM_WEBLINKSPLUS="JXTC Weblinks Plus"
-COM_WEBLINKSPLUS_XML_DESCRIPTION="JoomlaXTC WebLinks Pro for Joomla! 1.6/1.7 v1.0.0 - Visit www.joomlaxtc.com documents area for help."
+COM_WEBLINKSPLUS_XML_DESCRIPTION="JoomlaXTC WebLinks Pro - Visit www.joomlaxtc.com documents area for help."
 COM_WEBLINKSPLUS_LINKS="Links"
 COM_WEBLINKSPLUS_CATEGORIES="Categories"
 COM_WEBLINKSPLUS_CATEGORY_ADD_TITLE="Category Manager: Add A New Weblinks Category"
